--- a/samconfig.toml
+++ b/samconfig.toml
@@ -16,10 +16,12 @@ lint = true
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
-resolve_s3 = true
+s3_bucket = "ac-deploy"
+s3_prefix = "athena-mysql-udf"
 
 [default.package.parameters]
-resolve_s3 = true
+s3_bucket = "ac-deploy"
+s3_prefix = "athena-mysql-udf"
 
 [default.sync.parameters]
 watch = true
